...
            
            Text("Grades")
                .font(.Tally.subheadline)
                .foregroundColor(Color.Tally.textSecondary)
                .padding(.bottom, 8)
            
            Text("People")
                .font(.Tally.subheadline)
                .foregroundColor(Color.Tally.textSecondary)
                .padding(.bottom, 8)
            Spacer()
        }
    }
...
